--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -1,4 +1,36 @@
 .hero
+  min-height: 860px
   background-image: url(../img/hero-bg.jpg)
   background-position: top
-  background-size: contain
+  background-size: cover
+  background-repeat: no-repeat
+  .card
+    max-width: 570px
+    padding: 100px 125px 125px 100px
+    background-color: #f7b516
+    display: flex
+    flex-direction: column
+    align-items: flex-start
+    justify-content: space-between
+    box-sizing: border-box
+    .advantages
+      display: flex
+      flex-direction: column
+    .adv-item
+      display: flex
+      align-items: center
+      span
+        font-size: 18px
+        +reg
+        margin: 25px
+    h1
+      +bold
+      text-transform: uppercase
+      font-size: 40px
+      color: #000000
+      line-height: 55px
+      margin-bottom: 50px
+    span.tagline
+      font-size: 25px
+      +bold
+      margin-bottom: 100px
