have-to-wait section

--- a/fonts/_stylesheet.scss
+++ b/fonts/_stylesheet.scss
@@ -7,6 +7,7 @@
         url('ProximaNova-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
+    font-display: swap
 }
 
 @font-face {
@@ -18,6 +19,7 @@
         url('ProximaNova-Black.ttf') format('truetype');
     font-weight: 900;
     font-style: normal;
+    font-display: swap
 }
 
 @font-face {
@@ -29,6 +31,7 @@
         url('ProximaNovaT-Thin.ttf') format('truetype');
     font-weight: 100;
     font-style: normal;
+    font-display: swap
 }
 
 @font-face {
@@ -40,6 +43,7 @@
         url('ProximaNovaT-Thin_1.ttf') format('truetype');
     font-weight: 100;
     font-style: normal;
+    font-display: swap
 }
 
 @font-face {
@@ -51,6 +55,7 @@
         url('ProximaNova-Black_1.ttf') format('truetype');
     font-weight: 900;
     font-style: normal;
+    font-display: swap
 }
 
 @font-face {
@@ -62,6 +67,7 @@
         url('ProximaNova-Regular_1.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
+    font-display: swap
 }
 
 @font-face {
@@ -73,6 +79,7 @@
         url('ProximaNovaT-Thin_2.ttf') format('truetype');
     font-weight: 100;
     font-style: normal;
+    font-display: swap
 }
 
 @font-face {
@@ -84,6 +91,7 @@
         url('ProximaNova-Regular_2.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
+    font-display: swap
 }
 
 @font-face {
@@ -95,5 +103,6 @@
         url('ProximaNova-Black_2.ttf') format('truetype');
     font-weight: 900;
     font-style: normal;
+    font-display: swap
 }
 
