--- a/sass/_global.sass
+++ b/sass/_global.sass
@@ -3,3 +3,11 @@ body
 .container
   width: 1170px
   margin: 0 auto
+.btn-blue
+  color: #fff
+  text-decoration: none
+  padding: 20px 30px
+  font-size: 12px
+  +bold
+  text-transform: uppercase
+  background-color: #1669b3
