--- a/sass/_global.sass
+++ b/sass/_global.sass
@@ -8,6 +8,10 @@ body
   text-decoration: none
   padding: 20px 30px
   font-size: 12px
-  +bold
   text-transform: uppercase
   background-color: #1669b3
+  +bold
+button
+
+  border: 0
+  outline: none
