--- a/sass/main.sass
+++ b/sass/main.sass
@@ -8,3 +8,7 @@
 @import 'blocks/have-to-wait'
 @import 'blocks/specific-item'
 @import 'blocks/discount'
+@import 'blocks/comfy-work'
+@import 'slick'
+@import 'blocks/storage'
+@import 'blocks/services'
