--- a/sass/_global.sass
+++ b/sass/_global.sass
@@ -15,3 +15,13 @@ button
 
   border: 0
   outline: none
+  &:hover
+    cursor: pointer
+.btn-yellow
+  width: 370px
+  background-color: #f7b516
+  height: 70px
+  text-transform: uppercase
+  color: #fff
+  font-size: 18px
+  +bold
