--- a/sass/main.sass
+++ b/sass/main.sass
@@ -12,3 +12,6 @@
 @import 'slick'
 @import 'blocks/storage'
 @import 'blocks/services'
+@import 'blocks/consult'
+@import 'blocks/invation'
+@import 'blocks/footer'
