--- a/sass/blocks/_have-to-wait.sass
+++ b/sass/blocks/_have-to-wait.sass
@@ -23,6 +23,7 @@
   .adv-item
     display: flex
     flex-direction: column
+    justify-content: space-between
     width: 25%
     align-items: center
     p
