--- a/sass/blocks/_hero-fb.sass
+++ b/sass/blocks/_hero-fb.sass
@@ -44,6 +44,7 @@
       text-align: right
       span
         font-size: 14px
+        text-shadow: 0px 0px 3px #fff
         +reg
       img
         margin-left: 30px
