--- a/sass/blocks/_specific-item.sass
+++ b/sass/blocks/_specific-item.sass
@@ -3,6 +3,7 @@
   height: 580px
   position: relative
   background-image: url(../img/specific-item-left-bg.jpg)
+  background-repeat: no-repeat
   z-index: 1
   padding: 100px 0
   &::before
