--- a/sass/blocks/_specific-item.sass
+++ b/sass/blocks/_specific-item.sass
@@ -53,7 +53,7 @@
   span
     font-size: 14px
     margin-bottom: 15px
-    text-shadow: 0px 0px 4px 4px #000  
+    text-shadow: 0px 0px 4px #000  
   .phone
     font-size: 30px
     +bold
