--- a/sass/media/_992.sass
+++ b/sass/media/_992.sass
@@ -12,6 +12,8 @@
     background-image: none
   .hero-fb form .desc span
     font-size: 16px
+  .hero-fb form
+    width: 100%
   .specific-item
     height: 700px
     background-position: left bottom
